# zgui

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  LICENSE.txt  README.md
src/: builder.cpp  builder.h  calc.cpp  component.cpp  component.h  draw.cpp  gui.cpp  gui.h  main.cpp  zgui.h
